solved blurred images bug on chrome

--- a/docs/style.css
+++ b/docs/style.css
@@ -13,11 +13,13 @@ body {
 }
 
 .button-icon {
-    image-rendering: crisp-edges;
+    /* image-rendering: crisp-edges; */
+    image-rendering: pixelated;
     height: 50px;
 }
 .upbar-icon {
-    image-rendering: crisp-edges;
+    /* image-rendering: crisp-edges; */
+    image-rendering: pixelated;
     height: 50px;
 }
 
@@ -62,7 +64,8 @@ body {
     z-index: 1;
     top: 0px;
     left: 0px;
-    image-rendering: crisp-edges;
+    /* image-rendering: crisp-edges; */
+    image-rendering: pixelated;
     /*border-radius: 10px;*/
     border: solid black 5px;
 }
@@ -71,7 +74,8 @@ body {
     width: 100%;
     height: auto;
     bottom: 0%;
-    image-rendering: crisp-edges;
+    /* image-rendering: crisp-edges; */
+    image-rendering: pixelated;
     border-radius: 10px;
     z-index: 0;
 }
@@ -191,7 +195,8 @@ p {
 }
 
 img {
-    image-rendering: crisp-edges;
+    /* image-rendering: crisp-edges; */
+    image-rendering: pixelated;
 }
 
 
